:bug: Center-align title when no description and footer is set

--- a/@navikt/core/css/darkside/link-card.darkside.css
+++ b/@navikt/core/css/darkside/link-card.darkside.css
@@ -26,6 +26,10 @@
   &:not(:has(.aksel-link-card__description, .aksel-link-card__footer)) {
     grid-template-rows: auto 1fr;
 
+    & .aksel-link-card__title {
+      align-items: center;
+    }
+
     & .aksel-link-card__icon {
       align-self: center;
     }
