--- a/@navikt/core/css/link-card.css
+++ b/@navikt/core/css/link-card.css
@@ -33,6 +33,10 @@
   align-self: center;
 }
 
+.navds-link-card:not(:has(.navds-link-card__description, .navds-link-card__footer)) .navds-link-card__title {
+  align-items: center;
+}
+
 .navds-link-card:hover {
   border-color: var(--a-border-default);
   box-shadow: 0 0 0 1px var(--a-border-default);
